# meta-api-py

./: LICENSE  README.md  setup.cfg  setup.py
meta_api/: __init__.py  __main__.py
meta_api.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
