[metadata]
name = meta_api
version = 1.0.0
author = Tamilvip007
author_email = indrajeethy.it20@scew.org
description = A small example package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/TAMILVIP007/meta_api
project_urls =
    Bug Tracker = https://github.com/TAMILVIP007/meta_api/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = meta_api
packages = find:
python_requires = >=3.6

[options.packages.find]
where = meta_api